RJ-2024-003 html fixes

--- a/_articles/RJ-2024-003/RJ-2024-003.Rmd
+++ b/_articles/RJ-2024-003/RJ-2024-003.Rmd
@@ -89,7 +89,6 @@ draft: no
 ---
 
 
-::::::::::::::: article
 ## Introduction {#sec:intro}
 
 Cointegration and error correction are fundamental concepts in the
@@ -228,7 +227,7 @@ conditional ARDL model and its possible specifications [^1].
 
 The starting point of the approach proposed by  [@pesaran2001] is a
 $(K+1)$ VAR($p$) model
-$$\label{eq:var}
+$$
 \mathbf{A}(L)(\mathbf{z}_t-\boldsymbol{\mu}-\boldsymbol{\eta}t)=\boldsymbol{\varepsilon}_t \enspace \enspace \enspace \boldsymbol{\varepsilon}_t\sim N(\mathbf{0}, \boldsymbol{\Sigma}),\qquad\mathbf{A}(L)=\left(\mathbf{I}_{K+1}-  \sum_{j=1}^{p}\mathbf{A}_j\mathbf{L}^j\right)
 \enspace \enspace \enspace t=1,2,\dots,T.   (\#eq:var)$$
 Here, $\mathbf{A}_j$ are square $(K+1)$ matrices, $\mathbf{z}_t$ a
@@ -240,12 +239,12 @@ singular, the components of $\mathbf{z}_t$ turn out to be integrated and
 possibly cointegrated.\
 The VECM representation of \@ref(eq:var) is given by (see Appendix
 [7.1](#sec:appendixa) for details)
-$$\label{eq:vecm}
+$$ 
 \Delta\mathbf{z}_t=\boldsymbol{\alpha}_{0}+\boldsymbol{\alpha}_{1}t-\mathbf{A}(1)\mathbf{z}_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\Gamma}_{j}\Delta \mathbf{z}_{t-j}+\boldsymbol{\varepsilon}_t.   (\#eq:vecm)$$
 Now, to study the adjustment to the equilibrium of a single variable
 $y_t$, given the other $\mathbf{x}_t$ variables, the vectors
 $\mathbf{z}_t$ and $\boldsymbol{\varepsilon}_t$ are partitioned
-$$\label{eq:vecpart}
+$$ 
 \mathbf{z}_t=\begin{bmatrix}
 \underset{(1,1)}{y_{t}}  \\ \underset{(K,1)}{\mathbf{x}_{t}}  
 \end{bmatrix}, \enspace \enspace \enspace \boldsymbol{\varepsilon}_t=\begin{bmatrix}
@@ -258,11 +257,11 @@ $$\mathbf{A}(1)=\begin{bmatrix}
 \underset{(1,1)}{a_{yy}} & \underset{(1,K)}{\mathbf{a}_{yx}'} \\ \underset{(K,1)}{\mathbf{a}_{xy}} & \underset{(K,K)}{\mathbf{A}_{xx}}  
 \end{bmatrix}.$$
 Under the assumption
-$$\label{eq:normerr}
+$$ 
 \boldsymbol{\varepsilon}_t \sim N\Bigg(\mathbf{0}, \begin{bmatrix}
 \underset{(1,1)}{\sigma_{yy}}& \underset{(1,K)}{\boldsymbol{\sigma}_{yx}'}   \\ \underset{(K,1)}{\boldsymbol{\sigma}_{xy}} & \underset{(K,K)}{\boldsymbol{\Sigma}_{xx}} \end{bmatrix}\Bigg),   (\#eq:normerr)$$
 the following holds
-$$\label{eq:epsilonx}
+$$ 
 \varepsilon_{yt}=\boldsymbol{\omega}'\boldsymbol{\varepsilon}_{xt}+\nu_{yt} \sim N(0,\sigma_{y.x}),   (\#eq:epsilonx)$$
 where
 $\sigma_{y.x}=\sigma_{yy}-\boldsymbol{\omega}'\boldsymbol{\sigma}_{xy}$
@@ -273,25 +272,25 @@ Substituting \@ref(eq:epsilonx) into \@ref(eq:vecm) and assuming that
 the $\mathbf{x}_{t}$ variables are exogenous towards the ARDL parameters
 (that is, setting $\mathbf{a}_{xy}=\mathbf{0}$ in $\mathbf{A}(1)$)
 yields the system (see Appendix [7.1](#sec:appendixa) for details)
-$$\label{eq:ardl}
+$$ 
  	\Delta y_{t}=\alpha_{0.y}+\alpha_{1.y}t -a_{yy}EC_{t-1}+ \sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt}   (\#eq:ardl)$$
 
-$$\label{eq:marg}
+$$ 
 \Delta\mathbf{x}_{t} 
 = \boldsymbol{\alpha}_{0x} +\boldsymbol{\alpha}_{1x}t+ \mathbf{A}_{(x)}\mathbf{z}_{t-1}+ \boldsymbol{\Gamma}_{(x)}(L)\Delta\mathbf{z}_t+ \boldsymbol{\varepsilon}_{xt},   (\#eq:marg)$$
 where
-$$\label{eq:ardlgamma}
+$$ 
 \boldsymbol\gamma_{y.x,j}'=\boldsymbol\gamma_{y,j}'-\boldsymbol{\omega}'\boldsymbol{\Gamma}_{(x),j}   (\#eq:ardlgamma)$$
 
-$$\label{eq:ardldet}
+$$ 
 \alpha_{0.y}=\alpha_{0y}-\boldsymbol{\omega}'\boldsymbol{\alpha}_{0x}, \enspace \enspace \enspace \alpha_{1.y}=\alpha_{1y}-\boldsymbol{\omega}'\boldsymbol{\alpha}_{1x},   (\#eq:ardldet)$$
 and where the error correction term, $EC_{t-1}$, expressing the long-run
 equilibrium relationship between $y_{t}$ and $\mathbf{x}_{t}$, is given
 by
-$$\label{eq:ec}
+$$
 EC_{t-1}=y_{t-1}-\theta_{0}-\theta_{1}t-\boldsymbol{\theta}'\mathbf{x}_{t-1},   (\#eq:ec)$$
 with
-$$\label{eq:const}
+$$ 
 \theta_{0}=\mu_{y}-\boldsymbol{\theta}'\boldsymbol{\mu}_{x}, \enspace \theta_{1}=\eta_{y}-\boldsymbol{\theta}'\boldsymbol{\eta}_{x}, \enspace\boldsymbol{\theta}'=-\frac{\widetilde{\mathbf{a}'}_{y.x}}{a_{yy}}=-\frac{\mathbf{a}_{yx}'-\boldsymbol{\omega}'\mathbf{A}_{xx}}{a_{yy}}.   (\#eq:const)$$
 Thus, no cointegration occurs when
 $\widetilde{\mathbf{a}}_{y.x}=\mathbf{0}$ or $a_{yy}=0$ . These two
@@ -301,17 +300,15 @@ $y_{t}$ and $\mathbf{x}_{t}$.\
 To test the hypothesis of cointegration between $y_{t}$ and
 $\mathbf{x}_{t}$, @pesaran2001 proposed an $F$-test, $F_{ov}$ hereafter,
 based on the hypothesis system
-\begin{aligned}
-\label{eq:h0sys}
+\begin{align}
 H_0: a_{yy}=0 \; \cap \;\widetilde{\mathbf{a}}_{y.x}=\mathbf{0}\\
-H_1: a_{yy} \neq 0 \; \cup \;\widetilde{\mathbf{a}}_{y.x}\neq \mathbf{0}.
-\end{aligned}   (\#eq:h0sys)
+H_1: a_{yy} \neq 0 \; \cup \;\widetilde{\mathbf{a}}_{y.x}\neq \mathbf{0}.(\#eq:h0sys)
+\end{align}   
 Note that $H_{1}$ covers also the degenerate cases
-\begin{aligned}
-\label{eq:h0deg}
+\begin{align}
 H_1^{y.x}: a_{yy}=0 \; , \;\widetilde{\mathbf{a}}_{y.x}\neq\mathbf{0}\\
-H_1^{yy}: a_{yy} \neq 0 \; , \;\widetilde{\mathbf{a}}_{y.x} = \mathbf{0}.
-\end{aligned}   (\#eq:h0deg)
+H_1^{yy}: a_{yy} \neq 0 \; , \;\widetilde{\mathbf{a}}_{y.x} = \mathbf{0}.(\#eq:h0deg)
+\end{align}   
 The exact distribution of the $F$ statistic under the null is unknown,
 but it is limited from above and below by two asymptotic distributions:
 one corresponding to the case of stationary regressors, and another
@@ -330,55 +327,50 @@ for the ARDL model, depending on its deterministic components, which are
 (see Appendix [7.2](#sec:appendixb) for details)
 
 I.  *No intercept and no trend*
-    \begin{aligned}
-    \label{eq:case1}
-    \Delta y_t=-a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt},
-    \end{aligned}   (\#eq:case1)
+    \begin{align}
+    \Delta y_t=-a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt},(\#eq:case1)
+    \end{align}   
     where $EC_{t-1}=y_{t-1}-\boldsymbol{\theta}'\mathbf{x}_{t-1}$,\
 
 II. *Restricted intercept and no trend*
-    \begin{aligned}
-    \label{eq:case2}
+    \begin{align}
     \Delta y_{t}=
-    -a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt},
-    \end{aligned}   (\#eq:case2)
+    -a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt},(\#eq:case2)
+    \end{align}   
     where
     $EC_{t-1}=y_{t-1}-\theta_{0}-\boldsymbol{\theta}'\mathbf{x}_{t-1}$.
     The intercept extracted from the EC term is
     $\alpha_{0.y}^{EC} = a_{yy}\theta_0$.
 
 III. *Unrestricted intercept and no trend*
-     \begin{aligned}
-     \label{eq:case3}
+     \begin{align}
      \Delta y_{t}
-     =\alpha_{0.y}-a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt},
-     \end{aligned}   (\#eq:case3)
+     =\alpha_{0.y}-a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt},(\#eq:case3)
+     \end{align}   
      where $EC_{t-1}=y_{t-1}-\boldsymbol{\theta}'\mathbf{x}_{t-1}$.
 
 IV. *Unrestricted intercept, restricted trend*
-    \begin{aligned}
-    \label{eq:case4}
+    \begin{align}
     \Delta y_{t}=
-    \alpha_{0.y}-a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt},
-    \end{aligned}   (\#eq:case4)
+    \alpha_{0.y}-a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt},(\#eq:case4)
+    \end{align}   
     where
     $EC_{t-1}=y_{t-1}-\theta_{1}t-\boldsymbol{\theta}'\mathbf{x}_{t-1}$.
     The trend extracted from the EC term is
     $\alpha_{1.y}^{EC} = a_{yy}\theta_1$.
 
 V.  *Unrestricted intercept, unrestricted trend*
-    \begin{aligned}
-    \label{eq:case5}
+    \begin{align}
     \Delta y_{t}
     =\alpha_{0.y}+\alpha_{1.y}t
-    -a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt},
-    \end{aligned}   (\#eq:case5)
+    -a_{yy}EC_{t-1}+\sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{y.x,j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\omega}'\Delta\mathbf{x}_{t}+\nu_{yt}, (\#eq:case5)
+    \end{align}  
     where $EC_{t-1}=y_{t-1}-\boldsymbol{\theta}'\mathbf{x}_{t-1}$.
 
 The model in \@ref(eq:ardl) proposed by  @pesaran2001 represents the
 correct framework in which to carry out bound tests. However, bound test
 are often performed in an unconditional ARDL model setting, specified as
-$$\label{eq:ardluc}
+$$ 
  	\Delta y_{t}=\alpha_{0.y}+\alpha_{1.y}t -a_{yy}EC_{t-1}+ \sum_{j=1}^{p-1}\boldsymbol{\gamma}'_{j}\Delta\mathbf{z}_{t-j}+\varepsilon_{yt},   (\#eq:ardluc)$$
 which omits the term $\boldsymbol{\omega}'\Delta\mathbf{x}_{t}$.\
 [@bertelli2022bootstrap] have highlighted that bootstrap tests performed
@@ -392,14 +384,14 @@ while the unconditional one only uses the vector $\mathbf{a}_{yx}'$,
 $\boldsymbol{\omega}'\mathbf{A}_{xx}$. [^4] This can lead to contrasting
 inference in two instances. The first happens when a degeneracy of first
 type occurs in the conditional model, that is
-$$\label{eq:deg1cond}
+$$ 
 \widetilde{\mathbf{a}}_{y.x}'=\mathbf{0},   (\#eq:deg1cond)$$
 because
 $$\mathbf{a}_{yx}'=\boldsymbol{\omega}'\mathbf{A}_{xx}.$$
 In this case, the conditional model rejects cointegration, while the
 unconditional one concludes the opposite. The other case happens when a
 degeneracy of first type occurs in the unconditional model, that is
-$$\label{eq:deg1uc}
+$$ 
 \mathbf{a}_{yx}'=\mathbf{0},   (\#eq:deg1uc)$$
 but
 $$\widetilde{\mathbf{a}}_{y.x}'=\boldsymbol{\omega}'\mathbf{A}_{xx} \neq \mathbf{0}.$$
@@ -433,24 +425,26 @@ The bootstrap procedure consists of the following steps:
 
 3.  Following [@mcnown2018bootstrapping], the ARDL restricted residuals
     are then computed. For example, under Case III, the residuals are
-    $$\label{eq:resfov}
+    $$ 
     \widehat{\nu}_{yt}^{F_{ov}}=\Delta y_{t}-\widehat{\alpha}_{0.y}-\sum_{j=1}^{p-1}\widehat{\boldsymbol{\gamma}}_{y.x,j}'\Delta\mathbf{z}_{t-j}-\widehat{\boldsymbol{\omega}}'\Delta\mathbf{x}_{t}   (\#eq:resfov)$$
 
-    $$\label{eq:rest}
+    $$
     \widehat{\nu}_{yt}^{t}=\Delta y_{t}-\widehat{\alpha}_{0.y}+\widehat{\widetilde{\mathbf{a}}}'_{y.x}\mathbf{x}_{t-1}-  \sum_{j=1}^{p-1}\widehat{\boldsymbol{\gamma}}_{y.x,j}'\Delta\mathbf{z}_{t-j}-\widehat{\boldsymbol{\omega}}'\Delta\mathbf{x}_{t}   (\#eq:rest)$$
 
-    $$\label{eq:resfind}
+    $$
     \widehat{\nu}_{yt}^{F_{ind}}=\Delta y_{t}-\widehat{\alpha}_{0.y}+\widehat{a}_{yy}y_{t-1}-  \sum_{j=1}^{p-1}\widehat{\boldsymbol{\gamma}}_{y.x,j}'\Delta\mathbf{z}_{t-j}-\widehat{\boldsymbol{\omega}}'\Delta\mathbf{x}_{t}.   (\#eq:resfind)$$
     Here, the apex $"\widehat{\,\,.\,\,}"$ denotes the estimated
     parameters. The other cases can be dealt with in a similar manner.
 
 4.  The VECM model
-    $$\label{eq:vecmhat}
+    
+    $$
      \Delta\mathbf{z}_{t}=\boldsymbol{\alpha}_{0}-\mathbf{A}\mathbf{z}_{t-1}+ \sum_{j=1}^{p-1}\boldsymbol{\Gamma}_{j}\Delta\mathbf{z}_{t-j}+\boldsymbol{\varepsilon}_{t}   (\#eq:vecmhat)$$
     is estimated as well (imposing weak exogeneity), and the residuals
-    $$\label{eq:resvecm}
+    
+    $$
     \widehat{\boldsymbol{\varepsilon}}_{xt}= \Delta\mathbf{x}_{t}-\widehat{\boldsymbol{\alpha}}_{0x}+\widehat{\mathbf{A}}_{xx}\mathbf{x}_{t-1}- \sum_{j=1}^{p-1}\widehat{\boldsymbol{\Gamma}}_{(x)j}\Delta\mathbf{z}_{t-j}   (\#eq:resvecm)$$
-    are computed. This approach guarantees that the residuals
+    are computed. Thsis approach guarantees that the residuals
     $\widehat{\boldsymbol{\varepsilon}}_{xt}$, associated to the
     variables $\mathbf{x}_{t}$ explained by the marginal model
     \@ref(eq:marg), are uncorrelated with the ARDL residuals
@@ -464,10 +458,10 @@ The bootstrap procedure consists of the following steps:
     1.  Each set of $(T-p)$ resampled residuals (with replacement)
         $\widehat{\boldsymbol{\nu}}_{zt}^{(b)}=(\widehat{\nu}_{yt}^{(b)},\widehat{\boldsymbol{\varepsilon}}_{xt}^{(b)})$
         is re-centered [see @davidson2005case]
-        \begin{aligned}
-        \dot{\widehat{\nu}}^{(b)}_{yt}&=\widehat{\nu}^{(b)}_{yt} -\frac{1}{T-p}\sum_{t=p+1}^{T}\widehat{\nu}^{(b)}_{yt} \label{eq:recentery} \\
-        \dot{\widehat{\boldsymbol{\varepsilon}}}^{b}_{x_{i}t}&=\widehat{\boldsymbol{\varepsilon}}^{(b)}_{x_{i}t}-\frac{1}{T-p}\sum_{t=p+1}^{T}\widehat{\boldsymbol{\varepsilon}}^{(b)}_{x_{i}t}\qquad i=1,\dots,K.\label{eq:recenterx}
-        \end{aligned}   (\#eq:recentery)
+        \begin{align}
+        \dot{\widehat{\nu}}^{(b)}_{yt}&=\widehat{\nu}^{(b)}_{yt} -\frac{1}{T-p}\sum_{t=p+1}^{T}\widehat{\nu}^{(b)}_{yt} (\#eq:recentery) \\
+        \dot{\widehat{\boldsymbol{\varepsilon}}}^{b}_{x_{i}t}&=\widehat{\boldsymbol{\varepsilon}}^{(b)}_{x_{i}t}-\frac{1}{T-p}\sum_{t=p+1}^{T}\widehat{\boldsymbol{\varepsilon}}^{(b)}_{x_{i}t}\qquad i=1,\dots,K.(\#eq:recenterx)
+        \end{align}   
 
     2.  A sequential set of $(T-p)$ bootstrap observations,
         $y^{*}_{t}\enspace, \mathbf{x}^{*}_{t}\enspace t=p+1,\dots,T$,
@@ -495,11 +489,11 @@ The bootstrap procedure consists of the following steps:
     $M^*_b$ the ordered bootstrap test statistic, and with $\alpha$ the
     nominal significance level, the bootstrap critical values are
     determined as follows
-    $$\label{eq:bootf}
+    $$
     c^*_{\alpha,M}=\min\bigg\{c:\sum_{b=1}^{B}\mathbf{1}_{\{M^*_b >c\}}	\leq\alpha\bigg\}
     \qquad M\in\{F_{ov},F_{ind}\}   (\#eq:bootf)$$
     for the $F$ tests and
-    $$\label{eq:boott}
+    $$
     c^*_{{\alpha,t}}=\max\bigg\{c:\sum_{b=1}^{B}\mathbf{1}_{\{t^*_b<c\}}	\leq {\alpha}\bigg\}   (\#eq:boott)$$
     for the $t$ test.\
     Here, $\mathbf{1}_{\{x \in A\}}$ is the indicator function, which is
@@ -529,7 +523,7 @@ bootstrap testing procedure.
 The function `sim_vecm_ardl` allows to simulate a multivariate time
 series from a given conditional ARDL specification for a dependent
 variable $y_t$ and a VAR/VECM specification for the remaining
-independent variables $\mathbf{x}_t$. In this regard, it represents an
+independent variables $\mathbf{x}_t$. In sthis regard, it represents an
 interesting addition to extant data generating procedures for VAR/VECM
 models. The arguments of this function can be divided into two
 subgroups.\
@@ -690,9 +684,9 @@ knitr::include_graphics(c("figures/sim_ts.png"))
 knitr::include_graphics(c("figures/sim_ts_D2.png"))
 ```
 
-::: landscape
-```{r figflowchart, echo=FALSE , fig.cap="Flowchart of the sim_vecm_ardl function inner steps. When applying [eq:ardl] and [eq:marg], $y_{t_j}=0, \\Delta y_{t_j}=0, \\mathbf x_{t_j}=\\mathbf 0, \\Delta \\mathbf x_{t_j}= \\mathbf 0 for any t_j < 1$. Boxes denote parameter definitions and transformations. Circles denote crucial actions, Empty nodes denote function inputs.", fig.alt="graphic without alt text", fig.show='hold', fig.align="center", out.width="100%"}
-knitr::include_graphics(c("tikz/figflowchart.png"))
+::: {.l-page-outset}
+```{r figflowchart, echo=FALSE, fig.cap="Flowchart of the sim_vecm_ardl function inner steps. When applying (7) and (8), $y_{t_j}=0, \\Delta y_{t_j}=0, \\mathbf x_{t_j}=\\mathbf 0, \\Delta \\mathbf x_{t_j}= \\mathbf 0$ for any $t_j < 1$. Boxes denote parameter definitions and transformations. Circles denote crucial actions, Empty nodes denote function inputs.", fig.alt="graphic without alt text", fig.show='hold', fig.align="center", out.width="100%", out.height = 600}
+knitr::include_graphics(c("tikz/figflowchart.svg"))
 ```
 :::
 
@@ -830,9 +824,9 @@ Figure \@ref(fig:figflowchart-ardl). There, the expressions \"C ARDL\"
 and \"UC ARDL\" stand for conditional and unconditional ARDL model,
 respectively.\
 
-::: landscape
-```{r figflowchart-ardl, echo=FALSE , fig.cap="Flowchart of the boot_ardl function inner steps. Boxes denote parameter definitions and transformations. Diamonds denote function outputs. Dashed diamonds denote intermediate output (not shown after function call). Empty nodes denote function inputs. The first p+1 rows of $\\mathbf z_t^{(b)}$ are set equal to the first p+1 rows of the original data. The best lag order for each difference variable in the ARDL model is determined via auto_ardl(). It is reported as a unique value p in $\\boldsymbol{\\gamma}_{y.x,j}$ for brevity in the flowchart.", fig.alt="graphic without alt text", fig.show='hold', fig.align="center", out.width="100%"}
-knitr::include_graphics(c("tikz/figflowchart_ardl.png"))
+::: {.l-page-outset}
+```{r figflowchart-ardl, echo=FALSE, fig.cap="Flowchart of the boot_ardl function inner steps. Boxes denote parameter definitions and transformations. Diamonds denote function outputs. Dashed diamonds denote intermediate output (not shown after function call). Empty nodes denote function inputs. The first p+1 rows of $\\mathbf z_t^{(b)}$ are set equal to the first p+1 rows of the original data. The best lag order for each difference variable in the ARDL model is determined via auto_ardl(). It is reported as a unique value p in $\\boldsymbol{\\gamma}_{y.x,j}$ for brevity in the flowchart.", fig.alt="graphic without alt text", fig.show='hold', fig.align="center", out.width="100%", out.height = 600}
+knitr::include_graphics(c("tikz/figflowchart_ardl.svg"))
 ```
 :::
 
@@ -946,7 +940,7 @@ framework as no series is integrated of order higher than one.\
 The following ARDL equations have been estimated:
 
 1.  First ARDL equation (C | INC, INV):
-    \begin{aligned}
+    \begin{align}
         \Delta \log \text{C}_{t}&=\alpha_{0.y} -
         a_{yy} \log \text{C}_{t-1} - {a}_{y.x_1}\log \text{INC}_{t-1} - {a}_{y.x_2}\log \text{INV}_{t-1} +\\\nonumber
         &\sum_{j=1}^{p-1}\gamma_{y.j} \Delta\log \text{C}_{t-j} +
@@ -955,10 +949,10 @@ The following ARDL equations have been estimated:
         &\omega_1 \Delta\log \text{INC}_{t}+
         \omega_2 \Delta\log \text{INV}_{t}+\nu_{t}. 
         
-    \end{aligned}
+    \end{align}
 
 2.  Second ARDL equation (INC | C, INV):
-    \begin{aligned}
+    \begin{align}
         \Delta \log \text{INC}_{t}&=\alpha_{0.y} -
         a_{yy} \log \text{INC}_{t-1} - {a}_{y.x_1}\log \text{C}_{t-1} - {a}_{y.x_2}\log \text{INV}_{t-1} +\\\nonumber
         &\sum_{j=1}^{p-1}\gamma_{y.j} \Delta\log \text{INC}_{t-j} +
@@ -967,10 +961,10 @@ The following ARDL equations have been estimated:
         &\omega_1 \Delta\log \text{C}_{t}+
         \omega_2 \Delta\log \text{INV}_{t}+\nu_{t}. 
         
-    \end{aligned}
+    \end{align}
 
 3.  Third ARDL equation (INV | C, INC):
-    \begin{aligned}
+    \begin{align}
         \Delta \log \text{INV}_{t}&=\alpha_{0.y} -
         a_{yy} \log \text{INV}_{t-1} - {a}_{y.x_1}\log \text{C}_{t-1} - {a}_{y.x_2}\log \text{INC}_{t-1} +\\\nonumber
         &\sum_{j=1}^{p-1}\gamma_{y.j} \Delta\log \text{INV}_{t-j} +
@@ -979,7 +973,7 @@ The following ARDL equations have been estimated:
         &\omega_1 \Delta\log \text{C}_{t}+
         \omega_2 \Delta\log \text{INC}_{t}+\nu_{t}. 
         
-    \end{aligned}
+    \end{align}
 
 Table [3](#tab:est) shows the estimation results for each ARDL and VECM
 model. It is worth noting that the instantaneous difference of the
@@ -1051,25 +1045,25 @@ an Intel(R) Core(TM) i7-1165G7 CPU @ 2.80GHz processor, 16GB of RAM.
   -------------------- ----- ---------------- --------- ------------------ ----------
          Series          lag              ADF   p.value                ADF    p-value
 
-    $\log\text{C}_t$       0           -1.690     0.450             -9.750   $< 0.01$
+    $\log\text{C}_t$       0           -1.690     0.450             -9.750   <0.01
 
-                           1           -1.860     0.385             -5.190   $< 0.01$
+                           1           -1.860     0.385             -5.190   <0.01
 
                            2           -1.420     0.549             -3.130      0.030
 
                            3           -1.010     0.691             -2.720      0.080
 
-   $\log\text{INC}_t$      0           -2.290     0.217            -11.140    $<0.01$
+   $\log\text{INC}_t$      0           -2.290     0.217            -11.140    <0.01
 
-                           1           -1.960     0.345             -7.510   $< 0.01$
+                           1           -1.960     0.345             -7.510   <0.01
 
-                           2           -1.490     0.524             -5.120   $< 0.01$
+                           2           -1.490     0.524             -5.120   <0.01
 
                            3           -1.310     0.587             -3.290      0.020
 
-   $\log\text{INV}_t$      0           -1.200     0.625             -8.390   $< 0.01$
+   $\log\text{INV}_t$      0           -1.200     0.625             -8.390   <0.01
 
-                           1           -1.370     0.565             -5.570   $< 0.01$
+                           1           -1.370     0.565             -5.570   <0.01
 
                            2           -1.360     0.570             -3.300      0.020
 
@@ -1087,8 +1081,7 @@ knitr::include_graphics(c("figures/tsgraph.png"))
 ```
 :::
 
-:::: landscape
-::: {#tab:est}
+::: {#tab:est .l-screen-inset}
 |                           | | Model I | | | Model II | | | Model III | |
 |---------------------------|-----------------------------|-----------------------------|-----------------------------|-----------------------------|-----------------------------|-----------------------------|-----------------------------|-----------------------------|-----------------------------|
 |                           | ARDL                       | VECM |   | ARDL                       | VECM |   | ARDL                       | VECM |   |
@@ -1116,7 +1109,6 @@ knitr::include_graphics(c("figures/tsgraph.png"))
   $\mathbf A_{xx}$ matrix via the Johansen (J) test.\
   Significance codes: (\*\*\*) 1%; (\*\*) 5%; (.) 10%.
 :::
-::::
 
 ::: {#tab:cointbig}
   -------------------------------------------------------------------------------------------------------------------
@@ -1178,22 +1170,22 @@ variable, in turn, as the dependent one. The following ARDL equations
 have been estimated:
 
 1.  First ARDL equation (GDP | EXP, FDI):
-    \begin{aligned}
+    \begin{align}
         \Delta \log \text{GDP}_{t}&=\alpha_{0.y} -
         a_{yy} \log \text{GDP}_{t-1} - {a}_{y.x_1}\log \text{EXP}_{t-1} - {a}_{y.x_2}\log \text{FDI}_{t-1} +\\\nonumber
         &\sum_{j=1}^{p-1}\gamma_{y.j} \Delta\log \text{GDP}_{t-j} +
         \sum_{j=1}^{s-1}\gamma_{x_1.j} \Delta\log \text{EXP}_{t-j} +
         \sum_{j=1}^{r-1}\gamma_{x_2.j} \Delta\log \text{FDI}_{t-j} +\\\nonumber
         &\omega_1 \Delta\log \text{EXP}_{t}+
-        \omega_2 \Delta\log \text{FDI}_{t}+\nu_{t} 
+        \omega_2 \Delta\log \text{FDI}_{t}+\nu_{t}.
         
-    \end{aligned}
-    . For this model, a degenerate case of the first type can be
+    \end{align}
+    For this model, a degenerate case of the first type can be
     observed, while the simpler bound testing procedure does not signal
     cointegration.
 
 2.  Second ARDL equation (EXP | GDP, FDI):
-    \begin{aligned}
+    \begin{align}
         \Delta \log \text{EXP}_{t}&=\alpha_{0.y} -
         a_{yy} \log \text{EXP}_{t-1} - {a}_{y.x_1}\log \text{GDP}_{t-1} - {a}_{y.x_2}\log \text{FDI}_{t-1} +\\\nonumber
         &\sum_{j=1}^{p-1}\gamma_{y.j} \Delta\log \text{EXP}_{t-j} +
@@ -1202,13 +1194,13 @@ have been estimated:
         &\omega_1 \Delta\log \text{GDP}_{t}+
         \omega_2 \Delta\log \text{FDI}_{t}+\nu_{t}. 
         
-    \end{aligned}
+    \end{align}
     For this model, the ARDL bootstrap test indicates absence of
     cointegration, while the bound testing approach is inconclusive for
     the $F_{ind}$ test.
 
 3.  Third ARDL equation (FDI | GDP, EXP):
-    \begin{aligned}
+    \begin{align}
         \Delta \log \text{FDI}_{t}&=\alpha_{0.y} -
         a_{yy} \log \text{FDI}_{t-1} - {a}_{y.x_1}\log \text{GDP}_{t-1} - {a}_{y.x_2}\log \text{EXP}_{t-1} +\\\nonumber
         &\sum_{j=1}^{p-1}\gamma_{y.j} \Delta\log \text{FDI}_{t-j} +
@@ -1217,7 +1209,7 @@ have been estimated:
         &\omega_1 \Delta\log \text{GDP}_{t}+
         \omega_2 \Delta\log \text{EXP}_{t}+\nu_{t}. 
         
-    \end{aligned}
+    \end{align}
     For this model, the long-run cointegrating relationship is confirmed
     using both boostrap and bound testing. No spurious cointegration is
     detected.
@@ -1253,29 +1245,29 @@ with inconclusive inference via the bootstrap procedure, while naturally
 including the effect of conditioning in the ARDL model, as highlighted
 in @bertelli2022bootstrap.
 
-::: {#tab:gdp1}
-  -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-                                No Drift, No Trend                                                    Drift, No Trend                                 Drift and Trend                     
-  --------------------------- -------------------- ---------------------------- --------- --------- ----------------- --------- --------- --------- ----------------- --------- --------- ---------
-  Variable                                 Lag = 0                      Lag = 1   Lag = 2   Lag = 3           Lag = 0   Lag = 1   Lag = 2   Lag = 3           Lag = 0   Lag = 1   Lag = 2   Lag = 3
+::: {#tab:gdp1 .l-page}
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------
+                             No Drift, No Trend                                                    Drift, No Trend                                 Drift and Trend                     
+--------------------------- -------------------- ---------------------------- --------- --------- ----------------- --------- --------- --------- ----------------- --------- --------- ---------
+Variable                                 Lag = 0                      Lag = 1   Lag = 2   Lag = 3           Lag = 0   Lag = 1   Lag = 2   Lag = 3           Lag = 0   Lag = 1   Lag = 2   Lag = 3
 
-  $\log \text{GDP}_t$                         0.99                        0.974     0.941     0.796           $<0.01$   $<0.01$   $<0.01$     0.084              0.99      0.99      0.99      0.99
+$\log \text{GDP}_t$                         0.99                        0.974     0.941     0.796           <0.01     <0.01     <0.01     0.084              0.99      0.99      0.99      0.99
 
-  $\log \text{FDI}_t$                        0.572                        0.599     0.675     0.725           $<0.01$    0.0759    0.3199    0.5174           $<0.01$     0.013     0.151      0.46
+$\log \text{FDI}_t$                        0.572                        0.599     0.675     0.725           <0.01     0.0759    0.3199    0.5174           <0.01      0.013     0.151      0.46
 
-  $\log \text{EXP}_t$                        0.787                         0.71     0.698     0.684             0.479     0.288     0.467     0.433             0.629      0.35     0.463     0.379
+$\log \text{EXP}_t$                        0.787                         0.71     0.698     0.684            0.479     0.288     0.467     0.433            0.629      0.35      0.463     0.379
 
-  $\Delta\log \text{GDP}_t$                $<0.01$   $<0.01$`<!-- -->`{=html}64    0.0429    0.0402           $<0.01$    0.0861    0.3989    0.4267           $<0.01$   $<0.01$    0.0166     0.017
+$\Delta\log \text{GDP}_t$                <0.01                      <0.0164    0.0429    0.0402           <0.01     0.0861    0.3989    0.4267             <0.01     <0.01     0.0166     0.017
 
-  $\Delta\log \text{FDI}_t$                $<0.01$                      $<0.01$   $<0.01$   $<0.01$           $<0.01$   $<0.01$   $<0.01$   $<0.01$           $<0.01$   $<0.01$   $<0.01$   $<0.01$
+$\Delta\log \text{FDI}_t$                <0.01                      <0.01      <0.01     <0.01            <0.01     <0.01     <0.01     <0.01              <0.01     <0.01     <0.01     <0.01
 
-  $\Delta\log \text{EXP}_t$                $<0.01$                      $<0.01$   $<0.01$   $<0.01$           $<0.01$   $<0.01$   $<0.01$   $<0.01$           $<0.01$   $<0.01$    0.0336    0.0315
-  -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+$\Delta\log \text{EXP}_t$                <0.01                      <0.01      <0.01     <0.01            <0.01     <0.01     <0.01     <0.01              <0.01     <0.01     0.0336    0.0315
+---------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
   : Table 5: ADF preliminary test for the second example.
 :::
 
-::: {#tab:cointbig2}
+::: {#tab:cointbig2 .l-page}
   -------------------------------------------------------------------------------------------------------------------
                                                          PSS / SMG Threshold                         Outcome  
   ------- --------- ----------- ----------------------- --------------------- --------- ----------- --------- -------
@@ -1334,26 +1326,26 @@ performing the bootstrap analysis within an acceptable time frame.
 ### Section A - the methodological framework of (conditional) VECM and ARDL models {#sec:appendixa}
 
 Expanding the matrix polynomial $\mathbf{A}(z)$ about $z=1$, yields
-$$\label{eq:polyamat}
+$$
 \mathbf{A}(z)=\mathbf{A}(1)z+(1-z)\boldsymbol{\Gamma}(z),   (\#eq:polyamat)$$
 where
 $$\mathbf{A}(1)=\mathbf{I}_{K+1}-\sum_{j=1}^{p}\mathbf{A}_{j}$$
 
-$$\label{eq:polygamma}
+$$
 \boldsymbol{\Gamma}(z)=\mathbf{I}_{K+1}-\sum_{i=1}^{p-1}\boldsymbol{\Gamma}_{i}z^i, \enspace \enspace \boldsymbol{\Gamma}_{i}=-\sum_{j=i+1}^{p}\mathbf{A}_j.   (\#eq:polygamma)$$
 The VECM model \@ref(eq:vecm) follows accordingly, and
-$$\label{eq:vecmint}
+
+$$
 \boldsymbol{\alpha}_0=\mathbf{A}(1)\boldsymbol{\mu}+(\boldsymbol{\Gamma}(1)-\mathbf{A}(1))\boldsymbol{\eta}, \enspace \enspace \enspace \boldsymbol{\alpha}_1=\mathbf{A}(1)\boldsymbol{\eta}.   (\#eq:vecmint)$$
 Assuming that $\mathbf{A}(1)$ is singular and that the variables
 $\mathbf{x}_{t}$ are cointegrated. This entails the following
-\begin{aligned}
-\label{eq:factt}
+\begin{align}
     \mathbf{A}(1)=&\begin{bmatrix}
 \underset{(1,1)}{a_{yy}} & \underset{(1,K)}{\mathbf{a}_{yx}'} \\ \underset{(K,1)}{\mathbf{a}_{xy}} & \underset{(K,K)}{\mathbf{A}_{xx}}  
 \end{bmatrix}=\underset{(K+1,r+1)}{\mathbf{B}}\underset{(r+1,K+1)}{\mathbf{C}'}=\begin{bmatrix}b_{yy} & \mathbf{b}_{yx}'\\  \mathbf{b}_{xy} & \mathbf{B}_{xx} \end{bmatrix}\begin{bmatrix}c_{yy} & \mathbf{c}_{yx}'\\  \mathbf{c}_{xy} & \mathbf{C}_{xx}'\end{bmatrix}= \nonumber\\
 =&\begin{bmatrix}b_{yy}c_{yy}+\mathbf{b}_{yx}'\mathbf{c}_{xy} & b_{yy}\mathbf{c}_{yx}'+\mathbf{b}_{yx}'\mathbf{C}_{xx}'\\
-\mathbf{b}_{xy}c_{yy}+\mathbf{B}_{xx}\mathbf{c}_{xy} & \mathbf{b}_{xy}\mathbf{c}_{yx}'+ \mathbf{A}_{xx} \end{bmatrix}, \enspace \enspace \enspace rk(\mathbf{A}(1))=rk(\mathbf{B})=rk(\mathbf{C}),
-\end{aligned}   (\#eq:factt)
+\mathbf{b}_{xy}c_{yy}+\mathbf{B}_{xx}\mathbf{c}_{xy} & \mathbf{b}_{xy}\mathbf{c}_{yx}'+ \mathbf{A}_{xx} \end{bmatrix}, \enspace \enspace \enspace rk(\mathbf{A}(1))=rk(\mathbf{B})=rk(\mathbf{C}),(\#eq:factt)
+\end{align}   
 where $\mathbf{B}$ and $\mathbf{C}$ are full column rank matrices
 arising from the rank-factorization of
 $\mathbf{A}(1)=\mathbf{B}\mathbf{C}'$ with $\mathbf{C}$ matrix of the
@@ -1365,14 +1357,15 @@ By partitioning the vectors $\boldsymbol{\alpha}_{0}$,
 $\boldsymbol{\alpha}_{1}$, the matrix $\mathbf{A}(1)$ and the polynomial
 matrix $\boldsymbol{\Gamma}(L)$ conformably to $\mathbf{z}_{t}$, as
 follows
-$$\label{eq:alphapart}
+
+$$
 \boldsymbol{\alpha}_0=\begin{bmatrix}
 \underset{(1,1)}{\alpha_{0y}}  \\ \underset{(K,1)}{\boldsymbol{\alpha}_{0x}} 
 \end{bmatrix}, \enspace \enspace \enspace \boldsymbol{\alpha}_1=\begin{bmatrix}
 \underset{(1,1)}{\alpha_{1y}}  \\ \underset{(K,1)}{\boldsymbol{\alpha}_{1x} }
 \end{bmatrix}   (\#eq:alphapart)$$
 
-$$\label{eq:coeffpart}
+$$
 \mathbf{A}(1)=\begin{bmatrix}
 \underset{(1,K+1)}{\mathbf{a}'_{(y)}}  \\ \underset{(K,K+1)}{\mathbf{A}_{(x)}} 
 \end{bmatrix}
@@ -1387,7 +1380,8 @@ $$\label{eq:coeffpart}
 \underset{(1,1)}{\gamma_{yy}(L)} & \underset{(1,K)}{\boldsymbol{\gamma}'_{yx}(L)}  \\ \underset{(K,1)}{\boldsymbol{\gamma}_{xy}(L)} & \underset{(K,K)}{\boldsymbol{\Gamma}_{xx}(L) }
 \end{bmatrix}   (\#eq:coeffpart)$$
 , and substituting \@ref(eq:epsilonx) into \@ref(eq:vecm) yields
-$$\label{eq:condsys}
+
+$$
 \Delta\mathbf{z}_t=\begin{bmatrix}
 \Delta y_{t} \\ \Delta\mathbf{x}_{t} 
 \end{bmatrix}=\begin{bmatrix}
@@ -1406,44 +1400,54 @@ y_{t-1} \\ \mathbf{x}_{t-1}
 {\nu}_{yt} \\ \boldsymbol{\varepsilon}_{xt} 
 \end{bmatrix}   (\#eq:condsys)$$
 , where
-$$\label{eq:condintt}
+
+$$
 \alpha_{0.y}=\alpha_{0y}-\boldsymbol{\omega}'\boldsymbol{\alpha}_{0x}, \enspace \enspace \enspace \alpha_{1.y}=\alpha_{1y}-\boldsymbol{\omega}'\boldsymbol{\alpha}_{1x}   (\#eq:condintt)$$
 
-$$\label{eq:condAmat}
+$$
 \mathbf{a}'_{(y).x}=\mathbf{a}'_{(y)}-\boldsymbol{\omega}'\mathbf{A}_{(x)}, \enspace \enspace \enspace \boldsymbol{\gamma}'_{y.x}(L)=\boldsymbol{\gamma}_{y}'(L)-\boldsymbol{\omega}'\boldsymbol{\Gamma}_{(x)}(L).   (\#eq:condAmat)$$
+
 According to \@ref(eq:condsys), the long-run relationships of the VECM
 turn out to be now included in the matrix
-$$\label{eq:condAmat2}
+
+$$
 \begin{bmatrix}
 \mathbf{a}'_{(y).x} \\ \mathbf{A}_{(x)} 
 \end{bmatrix}=\begin{bmatrix}
 a_{yy}-\boldsymbol{\omega}'\mathbf{a}_{xy} & \mathbf{a}_{yx}'-\boldsymbol{\omega}'\mathbf{A}_{xx} \\ \mathbf{a}_{xy}&\mathbf{A}_{xx} 
 \end{bmatrix}.   (\#eq:condAmat2)$$
+
 To rule out the presence of long-run relationships between $y_{t}$ and
 $\mathbf{x}_{t}$ in the marginal model, the $\mathbf{x}_{t}$ variables
 are assumed to be exogenous with respect to the ARDL parameters, that is
 $\mathbf{a}_{xy}$ is assumed to be a null vector. Accordingly, the
 long-run matrix in \@ref(eq:condAmat2) becomes
-$$\label{eq:cond}
+
+$$
 \widetilde{\mathbf{A}}=\begin{bmatrix}a_{yy} & \mathbf{a}'_{yx}-\boldsymbol{\omega}'\mathbf{A}_{xx} \\ \mathbf{0} & \mathbf{A}_{xx} 
 \end{bmatrix}=\begin{bmatrix}
 a_{yy} & \widetilde{\mathbf{a}}_{y.x}' \\ \mathbf{0}&\mathbf{A}_{xx}\end{bmatrix} =\begin{bmatrix}
 b_{yy}c_{yy} & b_{yy}\mathbf c_{yx}'+(\mathbf{b}_{yx}'-\boldsymbol{\omega}'\mathbf{B}_{xx})\mathbf{C}_{xx}' \\ \mathbf{0}& \mathbf{B}_{xx}\mathbf{C}_{xx}'\end{bmatrix}.   (\#eq:cond)$$
+
 After these algebraic transformations, the ARDL equation for
 $\Delta y_{t}$ can be rewritten as in \@ref(eq:ardl).\
 In light of the factorization \@ref(eq:factt) of the matrix
 $\mathbf{A}(1)$, the long-run equilibrium vector $\boldsymbol{\theta}$
 can be expressed as
-$$\label{eq:thetat}
+
+$$
 \boldsymbol{\theta}'=
 -\frac{1}{a_{yy}}\underset{(1,r+1)}{\left[b_{yy}\enspace\enspace(\mathbf{b}_{yx}-\boldsymbol{\omega}'\mathbf{B}_{xx})\right]}
 \underset{(r+1,K)}{\begin{bmatrix} \mathbf{c}'_{yx}\\ \mathbf{C}'_{xx} \end{bmatrix}},   (\#eq:thetat)$$
+
 where
+
 $\widetilde{\mathbf{a}}_{y.x}=\mathbf{a}_{yx}-\boldsymbol{\omega}'\mathbf{A}_{xx}$.\
 Bearing in mind that $\mathbf{C}'_{xx}$ is the cointegrating matrix for
 the variables $\mathbf{x}_t$, the equation \@ref(eq:thetat) leads to the
 following conclusion
-$$\label{eq:rank}
+
+$$
 rk\begin{bmatrix}\mathbf{c}'_{yx}\\ \mathbf{C}'_{xx}\end{bmatrix}=\begin{cases}
 r  \to \enspace y_{t} \sim I(0) \\
 r+1 \to \enspace y_{t} \sim I(1) 
@@ -1452,7 +1456,7 @@ where $r=rk(\mathbf{A}_{xx})$ and $0 \leq r\leq K$.\
 
 ### Section B - Intercept and trend specifications {#sec:appendixb}
 
- @pesaran2001 introduced five different specifications for the ARDL
+@pesaran2001 introduced five different specifications for the ARDL
 model, which depend on the deterministic components that can be absent
 or restricted to the values they assume in the parent VAR model. In this
 connection, note that, in light of \@ref(eq:vecmint), the drift and the
@@ -1519,7 +1523,6 @@ The five specifications proposed by  @pesaran2001 are
     Accordingly,
     $$\alpha_{0.y} \neq 0 \enspace \enspace\alpha_{1.y} \neq 0, \enspace \enspace\theta_{0}=\theta_{1}=0.$$
     The model is as in \@ref(eq:case5).
-:::::::::::::::
 
 [^1]: The `R` packages, either used in the creation of
     [**bootCT**](https://CRAN.R-project.org/package=bootCT) or employed
